--- a/index.html
+++ b/index.html
@@ -166,16 +166,6 @@
             font-weight: 300;
         }
 
-        .liner-note a {
-            color: #6B7D8D;
-            text-decoration: none;
-        }
-
-        .liner-note a:hover {
-            text-decoration: underline;
-        }
-
-        /* Additional padding between URL and footnote */
         .liner-note .footnote {
             margin-top: 10px; /* Adjust the value as needed */
             display: block;
@@ -266,7 +256,7 @@
         <!-- Reordered Financial Metrics -->
         <!-- A 1% Engagement Shift in Engagement is worth -->
         <div class="financial-item">
-            <h3>A 1% Engagement Shift in Engagement is worth</h3>
+            <h3>A 1% Shift in Engagement is worth</h3>
             <p class="green" id="onePercentChange">--</p>
         </div>
 
@@ -288,13 +278,7 @@
     </div>
 
     <div class="liner-note">
-        <em>Gallup 2024 Annual Employee Engagement, State of The Global Workplace Report, June 12, 2024.</em><br>
-        <a href="https://www.gallup.com/394373/indicator-employee-engagement.aspx" target="_blank">
-            https://www.gallup.com/394373/indicator-employee-engagement.aspx
-        </a>
-        <span class="footnote"><br>
         <em>*For simplicity, headcount is estimated using national average salary figures.</em>
-        </span>
     </div>
 </div>
 
