--- a/index.html
+++ b/index.html
@@ -890,11 +890,14 @@
                     // Use html2canvas to capture the reportContent
                     html2canvas(reportContent, { scale: 3 }).then(canvas => { // Increased scale for better quality
                         const imgData = canvas.toDataURL('image/png');
-                        const pdf = new jsPDF({
+                        
+                        // **Corrected jsPDF Instantiation**
+                        const pdf = new window.jspdf.jsPDF({
                             orientation: 'portrait',
                             unit: 'pt',
                             format: 'a4' // Standard A4 size
                         });
+                        
                         const imgProps = pdf.getImageProperties(imgData);
                         const pdfWidth = pdf.internal.pageSize.getWidth();
                         const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
