--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
         <!-- Generate Report Button moved here -->
         <div class="financial-item generate-report-group">
-            <button type="button" id="generateReportButton">Generate Projected Profitability Analysis Report</button>
+            <button type="button" id="generateReportButton">Generate Projected Profitability Report</button>
         </div>
     </div>
 
@@ -888,7 +888,7 @@
                 </div>
                 
                 <!-- Download PDF Button -->
-                <button class="download-pdf-button no-pdf" id="downloadPDFButton">Download Sample Analysis Report</button>
+                <button class="download-pdf-button no-pdf" id="downloadPDFButton">Download Sample Profitability Report</button>
             `;
 
             // **Inject Report Content into the Modal**
